--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about me" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
           <li><a href="#Certificazioni" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Certificazioni</span></a></li>
           <li><a href="#Progetti" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Progetti</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Capacità acquisite</span></a></li>
@@ -298,7 +298,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <section id="Progetti" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
