--- a/lanterna-rossa.html
+++ b/lanterna-rossa.html
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/copertina.jpg" alt="">
+                  <img src="assets/img/portfolio/LR1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -118,7 +118,8 @@
                 <li><strong>Categoria</strong>: Libro Game</li>
                 <li><strong>Autori</strong>: 2B e 5D </li>
                 <li><strong>Data inizio del Progetto</strong>: 03 Dec, 2022</li>
-                <li><strong>URL</strong>: <a target="_blank" href="./assets/pdf/Lanterna Rossa.pdf">lanterna rossa</a></li>
+                <li><strong>URL</strong>: <a target="_blank" href="./assets/pdf/Lanternar.pdf">lanterna rossa</a></li>
+                <li><strong> </strong> <a target="_blank" a href="https://www.amazon.it/dp/B0C7J8286V?ref_=pe_3052080_397514860">Lanterna Rossa su Amazon</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
